# NAU-op

./: NAU-op.wsp  README.md
labs/: CMakeLists.txt  Untitled-1.cpp
labs/1.4/: main.cpp
labs/1.5/: main.cpp
labs/1.5/lab5/lab5/: lab5.cpp  lab5.vcxproj
labs/1st course/1.4/: main.cpp
labs/1st course/1.5/lab5/: lab5.sln
labs/1st course/2nd semestr/dz/: dz.cs
labs/1st course/2nd semestr/lab5/: program.cs  program.ts
labs/1st course/calculator/: calc.cpp
labs/1st course/rgr27/: Untitled-1.cpp  ahh.cpp
labs/2nd course/cr/: package-lock.json  курсова робота ооп сидорець.docx
labs/2nd course/cr/hospital-registry-console/: package-lock.json  package.json  tsconfig.json
labs/2nd course/crV2/hospital-registry-console-v2/: package-lock.json  package.json  tsconfig.json
labs/2nd course/lab1/: data.txt  package-lock.json  package.json
labs/2nd course/lab1/university-app/: data.txt  package-lock.json  package.json
labs/2nd course/lab2/: binaryTree.ts  collections.ts  main.ts  package-lock.json  package.json  product.ts
labs/2nd course/lab3/: package-lock.json  package.json  students.json
labs/2nd course/lab4/: index.ts  package-lock.json  package.json
labs/2nd semestr/lab5/: string.cs  string.ts
labs/2nd semestr/lab6/: IDigitAnalyzer.ts
labs/2nd semestr/lab7/: Expression.cs
labs/Yalynka/christmastree/: christmastree.sln
labs/appz/lab 3/: package-lock.json  package.json  tsconfig.json
labs/asd/Lab1.2/: main.ts
labs/asd/lab1.1/: lab1.1.ts
labs/mrpz/src/: Lab1.java  Lab2.java  Lab3.java
labs/rgr27/: Untitled-1.cpp
(+204 files in other folders)
