cmake_minimum_required(VERSION 3.29)
project(labs)

set(CMAKE_CXX_STANDARD 14)

add_executable(labs
    1.4/main.cpp
    1.5/lab5/lab5/lab5.cpp
    1.5/lab5.cpp
    1.5/main.cpp
    1.6/ceasar.cpp
    1.6/types_cast.cpp
    calculator/calc.cpp
    rgr27/Untitled-1.cpp
    Yalynka/christmastree/christmastree/christmastree.cpp
    Yalynka/christmastree/christmastree/yalynka.cpp
    Untitled-1.cpp
        "2nd semestr/lab1/cpp/rhombus.h"
        "2nd semestr/lab1/cpp/rhombus.cpp"
        "2nd semestr/lab1/cpp/main.cpp")
